fix(websql): hot fix websql database

--- a/index.html
+++ b/index.html
@@ -56,17 +56,15 @@
 			<div id="system-message">
 				<div class="alert fade in" id="message">
 					<a class="close" onclick="return app.closeMsg()">×</a>
-					<p id="msg" class="alert-message">
-
-					</p>
+					<p id="msg" class="alert-message"></p>
 				</div>
 			</div>
 		</div>
-		<!-- page principale -->
+<!-- page principale -->
 		<div id="contentoff" class="container contenu">	    	
 
-			<!-- navbar -->    	
 			<div class="row">
+				<!-- navbar -->
 				<nav class="navbar navbar-default navbar-fixed-top custom-navbar" role="navigation">
 					<div data-role="header">
 						<div data-role="controlgroup" data-type="horizontal" class="ui-mini ui-btn-right">
@@ -84,154 +82,148 @@
 					</div>
 				</nav>
 			<!-- /navbar -->
-
 			<!-- form -->	    
-				<div class="col-lg-12">
-					<div class="cot_admin_edit front-end-edit">
-						<div class="form">
-
-							<form method="get" id="form-cot_admin" role="form">
-
-								<!-- part I -->
-								<label><span class="input-group-addon exergue"><span class="fa fa-user"></span> Observer</span></label>
-
-								<div data-role="fieldcontain" class="ui-hide-label">
-									<label for="observer_name">Observer</label>	
-									<input type="text" name="observer_name" id="observer_name" value="" placeholder="Observer name" required/>
-									<span style="display:none;" >
-										<input type="text" id="id" name="id" readonly="readonly" value="" size="32"/>
-									</span>
-								</div>
-								<div data-role="fieldcontain" class="ui-hide-label">
-									<label for="observer_tel">Observer phone number</label>				    		
-									<input type="tel" name="observer_tel" id="observer_tel" value="" placeholder="Observer phone number"/>
-								</div>
-								<div data-role="fieldcontain" class="ui-hide-label">
-									<label for="observer_email">Email</label>			
-									<input type="email" name="observer_email" id="observer_email" value="" placeholder="Observer email" required/>
-								</div>
-
-								<!-- part II -->
-								<label><span class="input-group-addon exergue"><span class="fa fa-calendar"></span> Date and place</span></label>	
-								<div data-role="fieldcontain" class="ui-hide-label">
-									<label for="observation_datetime">Date</label>			
-									<input name="observation_datetime" id="observation_datetime" placeholder="Date" data-role="date" type="text">
-								</div>
-								<div data-role="fieldcontain" class="ui-hide-label">
-									<label for="observer_location">Context</label>	
-									<textarea name="observation_location" id="observation_location" placeholder="Observation context"></textarea>
-								</div>
-
-								<div id="offlineForm">
-
-									<div data-role="fieldcontain" class="ui-hide-label">
-										<label for="observer_localisation">Localization</label>		    		
-										<input type="text" id="observation_localisation" name="observation_localisation" value="" size="32" autocomplete="off" placeholder="Select localization on the map" required></input>
-									</div>
-									<div data-role="fieldcontain" class="ui-hide-label">
-										<label for="observer_region">Region</label>	   		
-										<input type="text" name="observation_region" id="observation_region" value="" class="region form-control" placeholder="Region"/>
-									</div>
-									<div data-role="fieldcontain" class="ui-hide-label">
-										<label for="observer_pays">Country</label> 
-										<input type="text" name="observation_pays" id="observation_pays" value="" class="country form-control" placeholder="Country"/>
-									</div>
-									<div data-role="fieldcontain" class="ui-hide-label">
-										<label for="observer_latitude">Latitude</label>		 
-										<input type="text" name="observation_latitude" id="observation_latitude" value="" class="latitude form-control" placeholder="Latitude"/>
-									</div>
-									<div data-role="fieldcontain" class="ui-hide-label">
-										<label for="observer_longitude">Longitude</label>	
-										<input type="text" name="observation_longitude" id="observation_longitude" value="" class="longitude form-control" placeholder="Longitude"/>
-									</div>
-
-								</div>
-
-								<!-- part III -->
-								<label><span class="input-group-addon exergue"><span class="fa fa-eye"></span> Observed acanthasters</span></label>
-								<div data-role="fieldcontain" class="ui-hide-label">
-									<label for="observation_number">Number of acanthaster</label>				    
-									<input type="text" name="observation_number" id="observation_number" value="" placeholder="Number of acanthasters observed" required/>
-								</div>
-								<div data-role="fieldcontain" class="ui-hide-label">
-									<label for="observer_culled">Acanthasters culled</label>				    		
-									<input type="text" name="observation_culled" id="observation_culled" value="" placeholder="Number of acanthasters culled"/>
-								</div>
-
-								<!-- part IV -->
-								<label><span class="input-group-addon exergue"><span class="fa fa-binoculars"></span> Observation method</span></label>	
-								<div data-role="fieldcontain" class="ui-hide-label">
-									<fieldset data-role="controlgroup">
-										<legend>Observation method</legend>
-										<input type="checkbox" name="observation_method0" id="observation_method0" value="snorkelling"/>
-										<label for="observation_method0" id="label_observation_method0">Snorkelling</label>
-										<input type="checkbox" name="observation_method1" id="observation_method1" value="scuba diving"/>
-										<label for="observation_method1" id="label_observation_method1">Scuba diving</label>
-									</fieldset>
-								</div>
-
-								<!-- part V -->
-								<label><span class="input-group-addon exergue"><span class="fa fa-arrows-v"></span> Depth range</span></label>	
-								<div data-role="fieldcontain" class="ui-hide-label">
-									<fieldset data-role="controlgroup">
-										<legend>Depth range</legend>
-										<input type="checkbox" id="depth_range0" name="depth_range0" value="shallow">
-										<label for="depth_range0" id="label_depth_range0">Less than 2m</label>
-										<input type="checkbox" id="depth_range1" name="depth_range1" value="medium">
-										<label for="depth_range1" id="label_depth_range1">Between 2 and 10m</label>
-										<input type="checkbox" id="depth_range2" name="depth_range" value="deep">
-										<label for="depth_range2" id="label_depth_range2">More than 10m</label>
-									</fieldset>
-								</div>
-
-								<!-- part VI -->
-								<label><span class="input-group-addon exergue"><span class="fa fa-cogs"></span> Counting method</span></label>
-								<div data-role="fieldcontain" class="ui-hide-label">
-									<fieldset data-role="controlgroup" data-type="horizontal">
-										<legend>Counting method</legend>
-										<input type="checkbox" id="counting_method_timed_swim_chbx" name="counting_method_timed_swim_chbx" onclick="app.enable_timed_swim(this.checked)"></input>
-										<label for="counting_method_timed_swim_chbx">Timed swim</label>
-										<input type="checkbox" id="counting_method_distance_swim_chbx" name="counting_method_distance_swim_chbx" onclick="app.enable_distance_swim(this.checked)"></input>
-										<label for="counting_method_distance_swim_chbx">Distance swim</label>
-										<input type="checkbox" id="counting_method_other_chbx" name="counting_method_other_chbx" onclick="app.enable_other(this.checked)"></input>
-										<label for="counting_method_other_chbx">Other</label>
-									</fieldset>
-								</div>
-
-								<div data-role="fieldcontain" class="ui-hide-label">
-									<label for="counting_method_timed_swim">Time</label>
-									<input type="text" name="counting_method_timed_swim" id="counting_method_timed_swim" value="" class="form-control" placeholder="Swimming time" readonly="readonly">
-								</div>
-
-								<div data-role="fieldcontain" class="ui-hide-label">
-									<label for="counting_method_distance_swim" class="ui-hidden-accessible">Distance</label>
-									<input type="text" name="counting_method_distance_swim" id="counting_method_distance_swim" value="" class="form-control" placeholder="Distance swim" readonly="readonly"></input>
-								</div>
-
-								<div data-role="fieldcontain" class="ui-hide-label">
-									<label for="counting_method_other" class="ui-hidden-accessible">Other</label>
-									<input type="text" name="counting_method_other" id="counting_method_other" value="" class="form-control" placeholder="Other" readonly="readonly"></input> 
-								</div>
-
-								<!-- part VII -->
-								<label><span class="input-group-addon exergue"><span class="fa fa-comment"></span> Remarks</span></label>
-								<div data-role="fieldcontain" class="ui-hide-label">
-									<label for="remarks">Remarks</label>				    		
-									<textarea name="remarks" id="remarks" placeholder="Ex: living corals coverture, dead corals, bleaching, seeweeds…"></textarea>
-								</div>
-
-								<!-- part VIII -->
-								<div id="btns-cancel-save">
-				    				<button id="btn-cancel" style="display:none;" href="#" onclick="return app.cancel()">Back to the list</button>
-				    				<button id="btn-save" style="display:none;" href="#" onclick="return app.saveForm()">Save</button>
-				    			</div>
-
-							</form>
-						</div>
+			<div class="col-lg-12">
+				<div class="cot_admin_edit front-end-edit">
+			<div class="form">
+			<form method="get" id="form-cot_admin" role="form">
+					<!-- part I -->
+					<label>
+						<span class="input-group-addon exergue"><span class="fa fa-user"></span> Observer</span>
+					</label>
+					<div data-role="fieldcontain" class="ui-hide-label">
+					<label for="observer_name">Observer</label>	
+						<input type="text" name="observer_name" id="observer_name" value="" placeholder="Observer name" required/>
+						<span style="display:none;" >
+				<input type="text" id="id" name="id" readonly="readonly" value="" size="32"/>
+				</span>
 					</div>
+					<div data-role="fieldcontain" class="ui-hide-label">
+							<label for="observer_tel">Observer phone number</label>				    		
+						<input type="tel" name="observer_tel" id="observer_tel" value="" placeholder="Observer phone number"/>
+					</div>
+					<div data-role="fieldcontain" class="ui-hide-label">
+							<label for="observer_email">Email</label>			
+							<input type="email" name="observer_email" id="observer_email" value="" placeholder="Observer email" required/>
+					</div>
+					<!-- part II -->
+					<label>
+						<span class="input-group-addon exergue"><span class="fa fa-calendar"></span> Date and place</span>
+					</label>	
+					<div data-role="fieldcontain" class="ui-hide-label">
+							<label for="observation_datetime">Date</label>		
+							<input name="observation_datetime" id="observation_datetime" placeholder="Date" data-role="date" type="text">
+					</div>
+					<div data-role="fieldcontain" class="ui-hide-label">
+							<label for="observer_location">Context</label>	
+							<textarea name="observation_location" id="observation_location" placeholder="Observation context"></textarea>
+					</div>
+					<div id="offlineForm">
+						<div data-role="fieldcontain" class="ui-hide-label">
+							<label for="observer_localisation">Localization</label>		    		
+						<input type="text" id="observation_localisation" name="observation_localisation" value="" size="32" autocomplete="off" placeholder="Select localization on the map" required></input>
+					</div>
+					<div data-role="fieldcontain" class="ui-hide-label">
+							<label for="observer_region">Region</label>	   		
+						<input type="text" name="observation_region" id="observation_region" value="" class="region form-control" placeholder="Region"/>
+					</div>
+					<div data-role="fieldcontain" class="ui-hide-label">
+							<label for="observer_pays">Country</label> 
+							<input type="text" name="observation_pays" id="observation_pays" value="" class="country form-control" placeholder="Country"/>
+					</div>
+					<div data-role="fieldcontain" class="ui-hide-label">
+							<label for="observer_latitude">Latitude</label>		 
+							<input type="text" name="observation_latitude" id="observation_latitude" value="" class="latitude form-control" placeholder="Latitude"/>
+					</div>
+					<div data-role="fieldcontain" class="ui-hide-label">
+							<label for="observer_longitude">Longitude</label>	
+							<input type="text" name="observation_longitude" id="observation_longitude" value="" class="longitude form-control" placeholder="Longitude"/>
+					</div>
+					</div>
+					<!-- part III -->
+					<label>
+						<span class="input-group-addon exergue"><span class="fa fa-eye"></span> Observed acanthasters</span>
+					</label>
+					<div data-role="fieldcontain" class="ui-hide-label">
+						<label for="observation_number">Number of acanthaster</label>				    
+						<input type="text" name="observation_number" id="observation_number" value="" placeholder="Number of acanthasters observed" required/>
+					</div>
+					<div data-role="fieldcontain" class="ui-hide-label">
+						<label for="observer_culled">Acanthasters culled</label>				    		
+						<input type="text" name="observation_culled" id="observation_culled" value="" placeholder="Number of acanthasters culled"/>
+					</div>
+					<!-- part IV -->
+					<label>
+						<span class="input-group-addon exergue"><span class="fa fa-binoculars"></span> Observation method</span>
+					</label>	
+					<div data-role="fieldcontain" class="ui-hide-label">
+					<fieldset data-role="controlgroup">
+						<legend>Observation method</legend>
+						<input type="checkbox" name="observation_method0" id="observation_method0" value="snorkelling"/>
+						<label for="observation_method0" id="label_observation_method0">Snorkelling</label>
+						<input type="checkbox" name="observation_method1" id="observation_method1" value="scuba diving"/>
+						<label for="observation_method1" id="label_observation_method1">Scuba diving</label>
+					</fieldset>
 				</div>
-			</div>
+				<!-- part V -->
+				<label><span class="input-group-addon exergue"><span class="fa fa-arrows-v"></span> Depth range</span></label>	
+				<div data-role="fieldcontain" class="ui-hide-label">
+					<fieldset data-role="controlgroup">
+						<legend>Depth range</legend>
+						<input type="checkbox" id="depth_range0" name="depth_range0" value="shallow">
+						<label for="depth_range0" id="label_depth_range0">Less than 2m</label>
+						<input type="checkbox" id="depth_range1" name="depth_range1" value="medium">
+						<label for="depth_range1" id="label_depth_range1">Between 2 and 10m</label>
+						<input type="checkbox" id="depth_range2" name="depth_range" value="deep">
+						<label for="depth_range2" id="label_depth_range2">More than 10m</label>
+					</fieldset>
+				</div>
+				<!-- part VI -->
+				<label>
+					<span class="input-group-addon exergue"><span class="fa fa-cogs"></span> Counting method</span>
+				</label>
+				<div data-role="fieldcontain" class="ui-hide-label">
+					<fieldset data-role="controlgroup" data-type="horizontal">
+						<legend>Counting method</legend>
+						<input type="checkbox" id="counting_method_timed_swim_chbx" name="counting_method_timed_swim_chbx" onclick="app.enable_timed_swim(this.checked)"></input>
+						<label for="counting_method_timed_swim_chbx">Timed swim</label>
+						<input type="checkbox" id="counting_method_distance_swim_chbx" name="counting_method_distance_swim_chbx" onclick="app.enable_distance_swim(this.checked)"></input>
+						<label for="counting_method_distance_swim_chbx">Distance swim</label>
+						<input type="checkbox" id="counting_method_other_chbx" name="counting_method_other_chbx" onclick="app.enable_other(this.checked)"></input>
+						<label for="counting_method_other_chbx">Other</label>
+					</fieldset>
+				</div>
+				<div data-role="fieldcontain" class="ui-hide-label">
+					<label for="counting_method_timed_swim">Time</label>
+					<input type="text" name="counting_method_timed_swim" id="counting_method_timed_swim" value="" class="form-control" placeholder="Swimming time" readonly="readonly">
+				</div>
+				<div data-role="fieldcontain" class="ui-hide-label">
+					<label for="counting_method_distance_swim" class="ui-hidden-accessible">Distance</label>
+					<input type="text" name="counting_method_distance_swim" id="counting_method_distance_swim" value="" class="form-control" placeholder="Distance swim" readonly="readonly"></input>
+				</div>
+				<div data-role="fieldcontain" class="ui-hide-label">
+					<label for="counting_method_other" class="ui-hidden-accessible">Other</label>
+					<input type="text" name="counting_method_other" id="counting_method_other" value="" class="form-control" placeholder="Other" readonly="readonly"></input> 
+				</div>
+				<!-- part VII -->
+				<label>
+					<span class="input-group-addon exergue"><span class="fa fa-comment"></span> Remarks</span>
+				</label>
+				<div data-role="fieldcontain" class="ui-hide-label">
+					<label for="remarks">Remarks</label>				    		
+					<textarea name="remarks" id="remarks" placeholder="Ex: living corals coverture, dead corals, bleaching, seeweeds…"></textarea>
+				</div>
+				<!-- part VIII -->
+				<div id="btns-cancel-save">
+		    	<button id="btn-cancel" style="display:none;" href="#" onclick="return app.cancel()">Back to the list</button>
+		    	<button id="btn-save" style="display:none;" href="#" onclick="return app.saveForm()">Save</button>
+				</div>
+			</form>
 		</div>
+	</div>
+	</div>
+	</div>
+	</div>
 	</div>
 	<script language="javascript" type="text/javascript" src="cordova.js"></script>
 	<script language="javascript" type="text/javascript" src="js/index.js"></script>
